--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.64.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
